# zstdiff

./: .gitignore  CMakeLists.txt
src/: mmap.cpp  mmap.hpp  zstdiff.cpp  zstpatch.cpp
